# anemometroSonico

./: LICENSE
hardware/amplifier/: amplifier.cmp  amplifier.kicad_pcb  amplifier.net  amplifier.pro  amplifier.sch  amplifier_bom.xlsx
hardware/driver/: driver.brd  driver.cmp  driver.net  driver.pro  driver.sch  driver_bom.xlsx  excitation.sch
hardware/firmware/: Makefile  main.cpp  pulse_generation.cpp  pulse_generation.h
hardware/libs/: 74HC4051.lib  AD8223.lib  ADC122S706.lib  ADG5207.lib  INA2128.lib  LQFP64.mod  LT1010.lib  OP1771.lib  TC1015.lib  TS5A3154.lib  VSSOP.mod
hardware/usb_adc/: usb_adc.brd  usb_adc.cmp  usb_adc.net  usb_adc.pro  usb_adc.sch  usb_adc_bom.xlsx
software/: CMakeLists.txt  adc_reader.cc  adc_reader.h  adc_reader.i  adc_reader_main.cc  adc_reader_test.cc  data_logger.py  data_preprocessing.py  data_preprocessing_test.py  data_recorder.py  plot_from_adc.py  plot_from_file.py  test_data_preprocessing.py  test_utilities.py  utilities.py
software/test_data/: frame_no_echo.nc  frame_v_zero.nc  frame_with_faulty_excitation.nc  frame_with_no_excitation.nc
